extending TranslationMap